--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,17 @@ APP_ENV=local
 APP_KEY=base64:7GJnPp0lcYAX/sPLf9bv5psaLiveAbKL6X6FJsKhsRY=
 APP_DEBUG=true
 APP_URL=http://jobs.test
+APP_PORT=8080
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432
 DB_DATABASE=jobs
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
