--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME="Jobs Platform"
 APP_ENV=local
 APP_KEY=base64:7GJnPp0lcYAX/sPLf9bv5psaLiveAbKL6X6FJsKhsRY=
 APP_DEBUG=true
-APP_URL=http://jobs.test
-APP_PORT=8080
+APP_URL=https://obscure-crag-99282.herokuapp.com/
+APP_PORT=80
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
