change .env.example environment to production

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME="Jobs Platform"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:7GJnPp0lcYAX/sPLf9bv5psaLiveAbKL6X6FJsKhsRY=
 APP_DEBUG=true
 APP_URL=https://obscure-crag-99282.herokuapp.com/
